--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_wow">ActivityWow</string>
     <string name="title_activity_second">SecondActivity</string>
+    <string name="help">Почта: mail@mail.com\nПароль: 123456</string>
 </resources>
